@@ -5,6 +5,8 @@ pciutils (1:3.7.0-4) UNRELEASED; urgency=medium
   * Update patches meta-information:
     - Add Forwarded meta-fields.
     - Switch a literal Debian bug URL into a Bug-Debian meta-field.
+  * Force update-pciids to generate a non-compressed pci.ids database.
+    Closes: #970762
 
  -- Guillem Jover <guillem@debian.org>  Wed, 23 Sep 2020 20:08:26 +0200
 
